--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Sidebar -->
             <div class="col-4 bg-darker fixed">
 
-                <!-- Sidebar -top -->
+                <!-- Sidebar top -->
                 <div class="d-flex flex-column justify-content-around mt-5 h-25">
                     <div>
                         <div class="d-flex justify-content-center">
@@ -65,16 +65,25 @@
                                     </select>
                                 </div>
                                 <div class="col-6">
-                                    <input type="text" class="add-description form-control bg-dark text-light" placeholder="Description">
+                                    <input type="text" class="add-description form-control bg-dark text-light mb-2" placeholder="Description">
                                 </div>
                                 <div class="col-4">
                                     <input type="number" class="add-value form-control bg-dark text-light" placeholder="Value">
                                 </div>
                             </div>
                         </form>
-                        <div class="d-flex justify-content-center mt-5">
+                        <div class="d-flex justify-content-center mt-4">
                             <button type="button" class="add-btn btn btn-outline-info">&#10003;</button>
                         </div>
+                        <!-- Chart -->
+                        <div class="row py-2 justify-content-center mt-5">
+                            <div class="card">
+                                <div class="card-body bg-darker">
+                                    <canvas class="budgetChart"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <p class="row text-secondary justify-content-center"><small>Budget App - Adrian Füzi</small></p>
                 </div>
@@ -130,7 +139,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap, jQuery, Chart.js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -140,7 +149,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <!-- Bootstrap, jQuery, Chart.js -->
+    
 
     <script src="./javascript/app.js"></script>
     
